--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -27,7 +27,7 @@
         </div>
     </div>
 
-    <div class="btn filter compant" *ngIf="auth.isAdmin()">
+    <div class="btn filter company" *ngIf="auth.isAdmin()">
         <span class="title">Bedrijf</span>
         <div class="dropdown">
             <div class="item" *ngFor="let company of companyService.companies"
