--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -40,6 +40,24 @@
         padding: 0 20px;
         border-right: 1px solid $infiltro-border-grey;
 
+        .title {
+            display: flex;
+            align-items: center;
+
+            .error {
+                background-color: $infiltro-red;
+                color: #fff;
+                font-size: 7px;
+                height: 10px;
+                width: 10px;
+                border-radius: 10px;
+                margin-left: 3px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+        }
+
         .dropdown {
             display: none;
             position: absolute;
