--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -60,13 +60,13 @@
         <span class="title">Sorteer</span>
         <!-- <img src="/assets/images/icon-unchecked.svg" alt=""> -->
         <div class="dropdown">
-            <div class="item" *ngFor="let sortable of projectService.sortables" (click)="sortProjects(sortable.type)">
+            <div class="item" *ngFor="let sortable of projectService.sortables" (click)="projectService.sortProjects(sortable.type)">
                 <ng-container *ngIf="sortable.sort">
                     <img src="/assets/images/icon-unchecked.svg" alt="" *ngIf="projectService.sortOptions.field !== sortable.type">
                     <img src="/assets/images/icon-checked.svg" alt="" *ngIf="projectService.sortOptions.field === sortable.type">
                     <span>{{sortable.name}}</span>
-                    <span *ngIf="projectService.sortOptions.field === sortable.type && projectService.sortOptions.order == 'desc'"> | desc</span>
-                    <span *ngIf="projectService.sortOptions.field === sortable.type && projectService.sortOptions.order == 'asc'"> | asc</span>
+                    <span class="arrow desc" *ngIf="projectService.sortOptions.field === sortable.type && projectService.sortOptions.order == 'desc'"><img src="/assets/images/icon-arrow.svg" alt=""></span>
+                    <span class="arrow asc" *ngIf="projectService.sortOptions.field === sortable.type && projectService.sortOptions.order == 'asc'"><img src="/assets/images/icon-arrow.svg" alt=""></span>
                 </ng-container>      
             </div>
         </div>
