--- a/src/assets/sass/_forms.scss
+++ b/src/assets/sass/_forms.scss
@@ -23,7 +23,7 @@ option,
     flex-grow: 1;
 }
 
-input, 
+input,
 textarea {
     width: 100%;
 }
@@ -64,7 +64,7 @@ form {
     // }
 
     .controls {
-        > * {
+        >* {
             height: 20px;
             margin-right: 10px;
             cursor: pointer;
@@ -121,6 +121,7 @@ form {
         display: block;
         font-weight: 700;
         width: 30%;
+        min-width: 120px;
         text-align: right;
         font-size: $input-fontsize;
         line-height: $input-lineheight;
