--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -163,6 +163,44 @@
         box-shadow: 0px 10px 14px -4px rgba(0, 0, 0, 0.43);
     }
 
+    &.isFuturePlanned {
+        position: relative;
+
+        margin-top: 35px;
+
+        &:before {
+            content: '';
+            position: absolute;
+            width: calc(100% + 3px);
+            top: -17px;
+            left: -3px;
+            border-top: 1px dotted $infiltro-border-grey;
+        }
+
+        &:after {
+            content: "Vandaag";
+            position: absolute;
+            top: -27px;
+            left: 10px;
+            padding: 0 5px 0 5px;
+            background-color: #fff;
+        }
+
+        & ~ & {
+            margin-top: 10px;
+
+            &:before {
+                border-top: none;
+            }
+
+            &:after {
+                content:'';
+            }
+        }
+    }
+
+
+
     .batchMode & {
         cursor: pointer;
     }
@@ -234,6 +272,7 @@
             font-size: 10px;
         }
     }
+
     .project {
         grid-template-columns: 15% 1fr 18% 24% 3.5%;
     }
