--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -66,6 +66,7 @@
             background-color: #fff;
             border: 1px solid $infiltro-border-grey;
             min-width: 150px;
+            z-index: 100;
 
             .select-options {
                 display: flex;
