--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -153,8 +153,9 @@
 .project {
     padding: 0 15px;
     margin: 10px 0;
+    grid-gap:2px;
     display: grid;
-    grid-template-columns: 100px 1fr 100px 170px 15px;
+    grid-template-columns: 100px 1fr 100px 170px 15px 15px;
     transition: 0.5s ease;
 
     &.selected {
@@ -187,7 +188,7 @@
             background-color: #fff;
         }
 
-        & ~ & {
+        &~& {
             margin-top: 10px;
 
             &:before {
@@ -195,7 +196,7 @@
             }
 
             &:after {
-                content:'';
+                content: '';
             }
         }
     }
@@ -238,7 +239,8 @@
         grid-row-start: span 2;
     }
 
-    .technicalDataFilledIn {
+    .technicalDataFilledIn,
+    .mailsSent {
         grid-column-start: 5;
         grid-row-start: span 2;
         display: flex;
@@ -248,6 +250,10 @@
         img {
             width: 15px;
         }
+    }
+
+    .mailsSent {
+        grid-column-start: 6;
     }
 }
 
