--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -153,7 +153,7 @@
 .project {
     padding: 0 15px;
     margin: 10px 0;
-    grid-gap:2px;
+    grid-gap: 2px;
     display: grid;
     grid-template-columns: 100px 1fr 100px 170px 15px 15px;
     transition: 0.5s ease;
@@ -176,7 +176,7 @@
             width: calc(100% + 3px);
             top: -17px;
             left: -3px;
-            border-top: 1px dotted $infiltro-border-grey;
+            border-top: 1px dotted $infiltro-grey;
         }
 
         &:after {
@@ -186,6 +186,8 @@
             left: 10px;
             padding: 0 5px 0 5px;
             background-color: #fff;
+            font-style: italic;
+            color: $infiltro-grey;
         }
 
         &~& {
