adding link to mail button

--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -127,9 +127,14 @@
                 </ng-template>
             </div>
             <div class="mailsSent">
-                <ng-container *ngIf="project.mails.length > 0">
-                    <img src="/assets/images/icon-mail.svg" alt="">
+                <ng-container *ngIf="project.mails.length > 0 && auth.isAdmin(); else notAnAdminForMail">
+                    <a [routerLink]="['/project/' + project.id + '/mail']">
+                        <img src="/assets/images/icon-mail.svg" alt="">
+                    </a>
                 </ng-container>
+                <ng-template #notAnAdminForMail *ngIf="project.mails.length > 0">
+                    <img src="/assets/images/icon-mail.svg" alt="">
+                </ng-template>
             </div>
         </div>
     </ng-container>
