--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -155,7 +155,7 @@
     margin: 10px 0;
     grid-gap: 2px;
     display: grid;
-    grid-template-columns: 100px 1fr 100px 170px 15px 15px;
+    grid-template-columns: 100px 1fr 100px 170px 15px 15px 15px;
     transition: 0.5s ease;
 
     &.selected {
@@ -246,7 +246,8 @@
     }
 
     .technicalDataFilledIn,
-    .mailsSent {
+    .mailsSent,
+    .commentGiven {
         grid-column-start: 5;
         grid-row-start: span 2;
         display: flex;
@@ -260,6 +261,10 @@
 
     .mailsSent {
         grid-column-start: 6;
+    }
+
+    .commentGiven {
+        grid-column-start: 7;
     }
 }
 
@@ -287,6 +292,29 @@
     }
 
     .project {
-        grid-template-columns: 15% 1fr 18% 24% 3.5%;
+        grid-template-columns: 15% 1fr 18% 24% 3.5% 3.5% 3.5%;
+    }
+}
+
+.hoverComment {
+    min-width: 320px;
+    padding: 10px;
+    background: white;
+    border: 1px solid $infiltro-red;
+    position: absolute;
+    transform: translate(-100%, calc(-100% - 5px));
+
+    &:after {
+        content: '';
+        display: block;
+        width: 0;
+        height: 0;
+        position: absolute;
+        bottom: -5px;
+        right: 2px;
+        -moz-transform: scale(.9999);
+        border-left: 5px solid transparent;
+        border-right: 5px solid transparent;
+        border-top: 5px solid $infiltro-red;
     }
 }
